{
  "@@locale": "en",
  "navMenus": "Menus",
  "navHome": "Home",
  "navShopping": "Shopping List",
  "notificationDefaultTitle": "SmartMeal!",
  "notificationDefaultBody": "You have a new notification",
  "notificationActionView": "View",
  "logoNotFound": "Logo not found",
  "appTitle": "SmartMeal",
  "home": "Home",
  "menu": "Menus",
  "shopping": "Shopping",
  "settings": "Settings",
  "support": "Support",
  "profile": "Profile",
  "logout": "Logout",
  "login": "Login",
  "register": "Sign up",
  "email": "Email",
  "password": "Password",
  "name": "Name",
...
  "settingsNotifications": "Notifications",
  "settingsNotificationsSubtitle": "Enable/disable notifications",
  "settingsDarkMode": "Dark Mode",
  "settingsDarkModeSubtitle": "Change app theme",
  "settingsLanguage": "Language",
  "settingsLanguageSubtitle": "Change app language",
  "settingsLanguageSpanish": "Español",
  "settingsLanguageEnglish": "English",
  "settingsHelpSection": "Help & Support",
  "settingsHelpCenter": "Help Center",
  "settingsHelpCenterSubtitle": "FAQs and tutorials",
  "settingsContactSupport": "Contact Support",
  "settingsContactSupportSubtitle": "Get help from the team",
  "settingsAbout": "About",
...
